# Fabric-OS

./: .gitignore  BUGFIX.md  INTERFACE_CONTRACT.md  Makefile  PHASE_0_SPEC.context  README.md  ROADMAP.md  V8_INTEGRATION.md
kernel/: Cargo.toml  build.rs  linker.ld
kernel/.cargo/: config.toml
kernel/src/: lib.rs  main.rs  panic.rs  serial.rs
kernel/src/address_space/: mod.rs  per_process.rs
kernel/src/bus/: arena.rs  audit.rs  mod.rs  monitor.rs  queue.rs  router.rs  sequence.rs
kernel/src/butler_state/: mod.rs
kernel/src/capability/: budget.rs  hmac_engine.rs  mod.rs  nonce.rs  slab.rs  store.rs
kernel/src/council/: consensus.rs  drift.rs  golden.rs  gpu_isolation.rs  learning.rs  mod.rs  model.rs  override_mgr.rs  weight_store.rs
kernel/src/display/: compositor.rs  drawing.rs  framebuffer.rs  mod.rs  text.rs
kernel/src/drivers/: e1000e.rs  mod.rs
kernel/src/elf/: mod.rs
kernel/src/gaming/: audio.rs  client.rs  codec.rs  gamepad.rs  mod.rs  stream.rs
kernel/src/governance/: acs.rs  break_glass.rs  constitution.rs  mod.rs  rules.rs  safety.rs  wp_protect.rs
kernel/src/hal/: dma.rs  driver_sdk.rs  interrupt.rs  irq_router.rs  mod.rs  pci_bind.rs  registry.rs
kernel/src/handle/: mod.rs  table.rs
kernel/src/io/: mod.rs
kernel/src/js_engine/: mod.rs
kernel/src/keyboard/: mod.rs
kernel/src/memory/: frame.rs  heap.rs  mapper.rs  mod.rs  page_table.rs
kernel/src/network/: addr.rs  arp.rs  buffer.rs  checksum.rs  crypto.rs  dns.rs  ethernet.rs  http.rs  ip.rs  loopback.rs  mod.rs  nic_dispatch.rs  nic_trait.rs  ops.rs  socket.rs  tcp.rs  tcp_timer.rs  tls.rs  udp.rs  virtio_nic_adapter.rs
kernel/src/ocrb/: bus_byzantine.rs  capability_storm.rs  mod.rs  (+16 more)
(+97 files in other folders)
