[package]
name = "fabric-kernel"
version = "0.1.0"
edition = "2021"
authors = ["Dshon Smith <admin@obeluslabs.com>"]
description = "FabricOS Kernel - AI-Coordinated Microkernel Fabric"
license = "GPL-3.0"

[workspace]

[features]
default = ["v8-platform"]
# Enable V8 platform integration
v8-platform = []
# Enable when building with real FabricOS kernel (disables stubs)
fabricos-kernel = []
# Enable test binary
test-binary = []

[dependencies]
limine = "0.5"
spin = "0.9"
linked_list_allocator = "0.10"
fabric-types = { path = "../fabric_types" }
sha3 = { version = "0.10", default-features = false }
sha2 = { version = "0.10", default-features = false }
hmac = { version = "0.12", default-features = false }

[lib]
name = "fabricos_kernel"
path = "src/lib.rs"

[[bin]]
name = "v8_platform_test"
path = "src/v8_platform/test_main.rs"
required-features = ["test-binary"]

[profile.dev]
panic = "abort"
debug = true
opt-level = 0

[profile.release]
panic = "abort"
opt-level = 2
lto = true
codegen-units = 1
